# neet

./: .gitignore  README.md  flake.nix  justfile
android/: .gitignore  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/counter/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/rmp/neet/: MainActivity.kt  ViewModel.kt  neet.kt
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/example/counter/: ExampleUnitTest.kt
ios/Neet/: NeetApp.swift  ViewModel.swift
ios/Neet.xcodeproj/: project.pbxproj
ios/Neet.xcodeproj/xcuserdata/justin.xcuserdatad/xcschemes/: xcschememanagement.plist
nix/: xcode.nix
rust/: Cargo.toml
rust/src/: lib.rs  logging.rs
scripts/: build-android.sh  build-ios.sh  run-android.sh  run-ios.sh
